# ini-parser

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
.github/workflows/: run_tests.yml
examples/: config.ini  unformatted.ini
include/: ini_exception.hpp  parser.hpp
src/: parser.cpp
tests/: parser_tests.cpp
